Visitor profile image width to max-width
since not every profile image has the same dimensions.

--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -135,7 +135,7 @@
         background:url(../images/avatar_frame.png) no-repeat;
 
         > img { // avatar image
-            width:122px;
+            max-width:122px;
             height:120px;
             margin:11px 0 0 12px;
         }
