Temporary change to test for recursion detection. [.travis.yml file is out of date]

--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -85,6 +85,8 @@ install:
 before_script:
   - ./tests/travis/configure_git.sh
 
+  - echo "change for testing"
+
   # print out mysql information
   - mysql --version
   - mysql -e "SELECT VERSION();"
