Fix more YAML indentation issues and only throw exception for no tests in generate:travis-yml when generating for a plugin.

--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -85,6 +85,8 @@ install:
 {% endif %}
 
 before_script:
+{% if pluginName is not empty %}  - cd piwik
+{% endif %}
   - ./tests/travis/configure_git.sh
 
   # print out mysql information
