When generating .travis.yml for plugins make sure travis scripts are always latest (even if testing against different branch).

--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -87,6 +87,10 @@ install:
 before_script:
 {% if pluginName is not empty %}  - cd piwik
 {% endif %}
+
+  # make sure travis test scripts are always latest (so in older releases/branches, the latest scripts will still be used)
+  - git checkout master ./tests/travis
+
   - ./tests/travis/configure_git.sh
 
   # print out mysql information
