Refs #5962, add ability for .travis.yml file to check out dependent plugins using DEPENDENT_PLUGINS travis environment variable (set in .travis.yml file manually).

--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -83,6 +83,9 @@ install:
   # move plugin contents to folder in the plugins subdirectory
   - rm -rf plugins/$PLUGIN_NAME
   - mv ../$PLUGIN_NAME plugins
+
+  # clone dependent repos
+  - ./tests/travis/checkout_dependent_plugins.sh
 {% endif %}
 
 before_script:
