--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -91,6 +91,7 @@ install:
   - ./tests/travis/checkout_dependent_plugins.sh
 {% else %}
   # make sure travis test scripts are always latest (so in older releases/branches, the latest scripts will still be used)
+  - git fetch
   - git checkout master ./tests/travis ./plugins/CoreConsole
 {% endif %}
 
