--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -92,7 +92,7 @@ install:
 {% else %}
   # make sure travis test scripts are always latest (so in older releases/branches, the latest scripts will still be used)
   - git fetch
-  - git checkout master -- ./tests/travis ./plugins/CoreConsole
+  - git checkout master -- ./tests/travis ./plugins/CoreConsole || true
 {% endif %}
 
 before_script:
