refs #5994 add marketplace link to user menu and actually highlight settings in the user menu only if the user is on the user settings for instance to prevent Marketplace and Settings is highlight but also because it does not really make sense otherwise

--- a/plugins/CoreHome/templates/_topBarTopMenu.twig
+++ b/plugins/CoreHome/templates/_topBarTopMenu.twig
@@ -37,8 +37,8 @@
              piwik-menudropdown>
 
             {% if userLogin != 'anonymous' %}
-                {% if isAdminLayout is defined %}
-                    <a class="item active">{{ 'General_Settings'|translate }}</a>
+                {% if isAdminLayout is defined and currentModule == 'UsersManager' and currentAction == 'userSettings' %}
+                    <a class="item active" href="index.php?module=CoreAdminHome">{{ 'General_Settings'|translate }}</a>
                 {% else %}
                     <a class="item" href="index.php?module=CoreAdminHome">{{ 'General_Settings'|translate }}</a>
                 {% endif %}
