fixes #5997 display label Pattern next to the field so it is clear which field is required

--- a/plugins/Goals/templates/_formAddGoal.twig
+++ b/plugins/Goals/templates/_formAddGoal.twig
@@ -43,6 +43,8 @@
                         <option value="regex">{{ 'Goals_MatchesExpression'|translate("") }}</option>
                     </select>
 
+                    {{ 'Goals_Pattern'|translate }}
+
                     <input type="text" name="pattern" value="" size="16" class="inp"/>
                     <br/>
 
