refs #5977 the menu dropdown now required the translate filter

--- a/plugins/CoreUpdater/templates/layout.twig
+++ b/plugins/CoreUpdater/templates/layout.twig
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="libs/angularjs/angular-cookies.min.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/translate.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/directive.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/focus-anywhere-but-here.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikAppConfig.js"></script>
