--- a/plugins/Installation/templates/layout.twig
+++ b/plugins/Installation/templates/layout.twig
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="libs/angularjs/angular-cookies.min.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/translate.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/directive.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/focus-anywhere-but-here.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikAppConfig.js"></script>
