refs #5977 moved the stylesheet definition to forms to make sure it is always applied

--- a/plugins/Morpheus/stylesheets/general/_forms.less
+++ b/plugins/Morpheus/stylesheets/general/_forms.less
@@ -41,6 +41,12 @@ button[type="button"],
     }
 }
 
+.top_bar_sites_selector {
+  .sites_autocomplete .custom_select {
+    z-index: 139;
+  }
+}
+
 .sites_autocomplete {
     input {
       min-height: 0;
