refs #6045 #6049 added an event to collect visitor info and made sure the Piwik UI kinda works when most tracker plugins are disabled

--- a/plugins/CoreHome/templates/_menu.twig
+++ b/plugins/CoreHome/templates/_menu.twig
@@ -40,8 +40,8 @@
 
     <ul class="Menu-tabList">
         {% for level1,level2 in menu %}
-            <li id="{{ _self.getId(level2._url) }}">
-                <a href="#{{ _self.getFirstUrl(level2._url) }}"
+            <li id="{% if level2._url is defined %}{{ _self.getId(level2._url) }}{% endif %}">
+                <a {% if level2._url is defined %}href="#{{ _self.getFirstUrl(level2._url) }}"{% endif %}
                    onclick="return piwikMenu.onItemClick(this);">{{ level1|translate }}</a>
                 <ul>
 
