--- a/plugins/CoreConsole/templates/travis.yml.twig
+++ b/plugins/CoreConsole/templates/travis.yml.twig
@@ -11,6 +11,7 @@
 
 language: php
 
+{% if phpVersions|default is empty %}
 # We want to test against PHP 5.3.3/5.4/5.5
 php:
   - 5.6
@@ -18,6 +19,11 @@ php:
   - 5.4
   - 5.3.3
 #  - hhvm
+{% else %}
+php:
+{% for version in phpVersions %}  - {{ version|raw }}
+{% endfor %}
+{% endif %}
 
 # Separate different test suites
 {% if existingEnv|default is empty -%}
