Refs #3490 Displaying User ID in the Visitor log

--- a/plugins/Live/templates/_dataTableViz_visitorLog.twig
+++ b/plugins/Live/templates/_dataTableViz_visitorLog.twig
@@ -118,13 +118,18 @@
                     {% if isWidget %}<br/>{% else %}-{% endif %} {{ visitor.getColumn('serverTimePrettyFirstAction') }}</strong>
                 {% if visitor.getColumn('visitIp') is not empty %}
                     <br/>
-                <span title="{% if visitor.getColumn('visitorId') is not empty %}{{ 'General_VisitorID'|translate }}: {{ visitor.getColumn('visitorId') }}{% endif -%}
-                {%- if visitor.getColumn('latitude') or visitor.getColumn('longitude') %}
+                <span title="{% if visitor.getColumn('userId') is not empty %}{{ 'General_UserId'|translate }}: {{ visitor.getColumn('userId') }}{% endif %}
+
+{% if visitor.getColumn('visitorId') is not empty %}{{ 'General_VisitorID'|translate }}: {{ visitor.getColumn('visitorId') }}{% endif -%}
+{%- if visitor.getColumn('latitude') or visitor.getColumn('longitude') %}
 
 {{ visitor.getColumn('location') }}
 
 GPS (lat/long): {{ visitor.getColumn('latitude') }},{{ visitor.getColumn('longitude') }}{% endif %}">
-                    IP: {{ visitor.getColumn('visitIp') }}</span>{% endif %}
+                    IP: {{ visitor.getColumn('visitIp') }}
+                    {% if visitor.getColumn('userId') is not empty %}<br/><br/>{{ visitor.getColumn('userId') }}{% endif %}
+
+                    </span>{% endif %}
 
                 {% if visitor.getColumn('provider') and visitor.getColumn('providerName')!='IP' %}
                     <br/>
