Refs #6109 New core metric: nb_users as the count of distinct user ids. Means "Active Users". Displayed in Visitors Overview, in metrics picker, in API response, in Metadata

--- a/plugins/VisitsSummary/templates/_sparklines.twig
+++ b/plugins/VisitsSummary/templates/_sparklines.twig
@@ -5,6 +5,10 @@
             {{ 'VisitsSummary_NbUniqueVisitors'|translate("<strong>"~nbUniqVisitors~"</strong>")|raw }}{% endif %}
     </div>
     <div class="sparkline">
+        {{ sparkline(urlSparklineNbUsers)|raw }}
+        {{ 'General_NUsers'|translate("<strong>"~nbUsers~"</strong>")|raw }}
+    </div>
+    <div class="sparkline">
         {{ sparkline(urlSparklineAvgVisitDuration)|raw }}
         {% set averageVisitDuration=averageVisitDuration|sumtime %}
         {{ 'VisitsSummary_AverageVisitDuration'|translate("<strong>"~averageVisitDuration~"</strong>")|raw }}
