--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -223,19 +223,10 @@ table.entityTable tr td a:hover {
   padding: 8px 10px 8px 10px;
   .border-radius(0px);
   .segmentationTitle {
-    background: none;
+    background: url(plugins/Morpheus/images/segment-users.png) no-repeat right 0;
     text-transform: uppercase;
     .font-default(10px, 12px);
     position: relative;
-    &:after {
-      content: '';
-      border-left: 4px solid transparent;
-      border-right: 4px solid transparent;
-      border-top: 5px solid @theme-color-brand;
-      position: absolute;
-      top: 3px;
-      right: 0;
-    }
   }
   .dropdown-body {
     background:#fff;
