Fixes #5355, add plus/minus icons to left of rows w/ subtables that change when tables expand/contract. Also add tooltip to rows w/ subtables.

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -454,6 +454,24 @@ table.dataTable {
     &.dataTableVizVisitorLog {
 
     }
+
+    tr.subDataTable > td:first-child:before {
+        display: inline-block;
+        float: left;
+        top: 0;
+        width: 1.25em;
+        font-size: .8em;
+        font-style: italic;
+        color:#888;
+    }
+
+    tr.subDataTable:not(.expanded) > td:first-child:before {
+        content: '+';
+    }
+
+    tr.subDataTable.expanded > td:first-child:before {
+        content: '-';
+    }
 }
 
 table.dataTable tr.subDataTable:hover > td, table.dataTable tr.subDataTable:hover > td .dataTableRowActions {
