Fix UI tests build and remove debugging change from angular_dialog branch.

--- a/plugins/Installation/templates/layout.twig
+++ b/plugins/Installation/templates/layout.twig
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="libs/angularjs/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="libs/angularjs/angular-animate.min.js"></script>
     <script type="text/javascript" src="libs/angularjs/angular-cookies.min.js"></script>
+    <script type="text/javascript" src="libs/angularjs/ngDialog/js/ngDialog.min.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/translate.js"></script>
