--- a/plugins/Annotations/templates/_annotationList.twig
+++ b/plugins/Annotations/templates/_annotationList.twig
@@ -8,11 +8,11 @@
         {% for annotation in annotations %}
             {% include "@Annotations/_annotation.twig" %}
         {% endfor %}
-        <tr class="new-annotation-row" style="display:none;" data-date="{{ endDate }}">
+        <tr class="new-annotation-row" style="display:none;" data-date="{{ selectedDate }}">
             <td class="annotation-meta">
                 <div class="annotation-star">&nbsp;</div>
                 <div class="annotation-period-edit">
-                    <a href="#">{{ endDate }}</a>
+                    <a href="#">{{ selectedDate }}</a>
 
                     <div class="datepicker" style="display:none;"/>
                 </div>
