--- a/plugins/CoreUpdater/templates/layout.twig
+++ b/plugins/CoreUpdater/templates/layout.twig
@@ -25,12 +25,12 @@
     <script type="text/javascript" src="libs/angularjs/angular-animate.min.js"></script>
     <script type="text/javascript" src="libs/angularjs/angular-cookies.min.js"></script>
     <script type="text/javascript" src="libs/angularjs/ngDialog/js/ngDialog.min.js"></script>
-    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.js"></script>
-    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/services/service.module.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/filter.module.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/filters/translate.js"></script>
-    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/directive.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/directive.module.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/common/directives/focus-anywhere-but-here.js"></script>
-    <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikAppConfig.js"></script>
+    <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikApp.config.js"></script>
     <script type="text/javascript" src="plugins/CoreHome/angularjs/piwikApp.js"></script>
     <script type="text/javascript" src="plugins/Installation/javascripts/installation.js"></script>
 
